HW_12.5/hw12.5_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: svcfronend
  namespace: default
spec:
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
  type: ClusterIP
  selector:
    app: frontend
