HW_12.5/hw12.5_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svcbackend
  namespace: default
spec:
  ports:
    - name: multitool
      port: 9002
      targetPort: 8080
  type: ClusterIP
  selector:
    app: backend
