HW_12.5/hw12.5_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress1
spec:
  rules:
    - host:
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: svcfronend
               port:
                 name: nginx
         - path: /backend
           pathType: Prefix
           backend:
             service:
               name: svcbackend
               port:
                 name: multitool
